--- a/package.json
+++ b/package.json
@@ -16,14 +16,16 @@
   },
   "dependencies": {
     "@babel/core": "^7.0.0-beta.38",
-    "@babel/polyfill": "^7.0.0-beta.38",
+    "@babel/polyfill": "^7.0.0-beta.49",
     "@babel/preset-env": "^7.0.0-beta.38",
     "@babel/preset-react": "^7.0.0-beta.38",
     "autoprefixer": "^7.2.6",
+    "axios": "^0.18.0",
     "babel-loader": "8.0.0-beta.0",
     "body-parser": "^1.18.2",
     "chalk": "^2.3.1",
     "compression": "^1.7.1",
+    "contentful": "^6.1.1",
     "css-loader": "^0.28.7",
     "express": "^4.15.4",
     "express-force-ssl": "^0.3.2",
